
[29/12/2020] - 5.0.7 - Simone Pelaia
Rinominato attributo "BaseAutomaticAttribute" in "AutomaticField". Può essere utilizzato per ricaricare i valori calcolati lato DB

[29/12/2020] - 5.0.8 - Simone Pelaia
Risolto bug che non consente il caricamento di biz objects su assembly multipli nella stessa applicazione (errata chiave di cache dell'assembly)

[26/01/2020] - 5.0.9 - Simone Pelaia
Introdotta funzione slot per tradurre i nomi proprieta' -> nomi colonne
Resa pubblica proprieta' TraceOnlyErrors su database
La configurazione di runtime dei nuovi slot viene clonata dalla statica

[14/04/2020] - 5.0.10 - Simone Pelaia
Introdotto attributo UserInfo per impostare automaticamente l'identificazione dell'utente automaticamente su dataobject da:
  - dato fornito attraverso la gestione dell'evento slot.OnUserInfoRequired
  - oppure da slot.Username
Introdotto attributo LogicalDelete per eseguire la cancellazione logica dei dataobject
  - modificato metodo Delete per consentire il bypass della cancellazione logica
Introdotto evento OnDbConnectionRequired sullo slot per richiedere esternamente la connessione DB specifica se non gia' presente nello slot
  - se e' stata preventivamente aperta una transazione sull'intera lista anche il nuovo db caricato avviera' la transazione

[14/04/2020] - 5.0.11 - Simone Pelaia
Nuovo metodo ToBizObjectList sulla datalist

[21/04/2020] - 5.0.12 - Simone Pelaia
Clone Businesslot - Vengono riattribuiti gli eventi dello slot principale
Reinclusa documentazione nei pacchetti

[21/05/2020] - 5.0.13 - Simone Pelaia
Possibile specificare la posizione del campo nel filtro: sx (default), dx rispetto all'operatore

[21/05/2020] - 5.0.14 - Simone Pelaia
Reincluso Xml di documentazione

[15/06/2020] - 5.0.15 - Simone Pelaia
Possibilita' di eseguire query su lista tramite espressione LINQ (SearchByLinq)

[28/06/2020] - 5.0.16 - Simone Pelaia
Serializzazione JSON solo per propriet semplici. No navigazione
Ordinamento SQL Liste tramite espressione LINQ